--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,12 @@ code {
   color: blue;
 }
 
-.img_cenrer{
-  margin-left: 10%;
-  width: 20%;
+.image_center{
+  width: 20%; 
+  height: 10%;
 }
+
 .text{
-  margin-left:  8%;
   color: white;
 }
 
@@ -48,23 +48,19 @@ code {
   background-color: white;
 }
 
-
-
 .buttons{
   width: 15%;
-  
-  
 }
+
 
 span{
   font-size: 35px;
   color:white;
   width:40px;
   margin: auto;
-  padding-left:20px;
+  padding-left:15px;
   color: #07ffc9;
 }
-
 
 .center{
   width: 42%;  
@@ -83,5 +79,9 @@ button[disabled]{
 }
 
 .lostGame{
+  color: white;
+}
+
+.wonGame{
   color: white;
 }
